--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Spheres Demo</title>
 </head>
 <body>
+    <canvas id="main-canvas" width="1000" height="1000"></canvas>
     <script type="module">
       import initSync from "./pkg/spheres.js"
 
